Add header_pages configuration to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ title: René Cano
 description: ITC Student | Software & Data Projects
 theme: minima
 author: René Cano
+
+header_pages:
+  - index.md
+  - projects.md
