--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: René Cano
+title: René Emiliano Cano Fuentes
 description: ITC Student | Software & Data Projects
 theme: minima
 author: René Cano
