Add URL to configuration and adjust header pages

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: René Cano
 description: ITC Student | Software & Data Projects
 theme: minima
 author: René Cano
+url: https://renecano.github.io
 
 header_pages:
   - index.md
